# roomnl-stats

./: .gitignore  README.md  justfile  pyproject.toml
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yaml  deploy.yaml
data/: recently_rented.parquet
pipeline/: __init__.py  generate.py  roomnl_model.py  scraper.py
site/: eslint.config.js  package-lock.json  package.json  svelte.config.js  tsconfig.json
site/src/: app.css  app.d.ts
site/src/lib/: data.ts  geo.ts  index.ts  types.ts
site/src/lib/components/: DataTable.svelte  Filters.svelte  ForecastChart.svelte  WaitTimeMap.svelte
site/src/routes/: +layout.svelte  +page.svelte  +page.ts
site/static/data/: meta.json  nl-provinces.json  predictions.json  recently_rented.json  stats.json
tests/: test_model.py
